added pages login/cryptolist with first 5 crypto from api

--- a/pages/main.html
+++ b/pages/main.html
@@ -12,14 +12,14 @@
     <header>
         <div class="header">
             <div class="pagesHeader" >
-                <div> <h1>Coin<span style="font-weight: bold;">Change</span></h1></div>
-                <div><h1>Trade</h1> </div>
-                <div><h1>Cryptovalue</h1></div>
+                <div><a href="../pages/main.html"> <h1>Coin<span style="font-weight: bold;">Change</span></h1></a> </div>
+                <div><a href="../pages/trade.html"><h1>Trade</h1>  </a></div>
+                <div> <a href="../pages/cryptolist.html"><h1>Cryptovalue</h1></a></div>
             </div>
             <div class="actionHeader">
                 <div><input type="text" placeholder="Search" id="search" style="background-color:#0D0D0D ;" ></div>
                 <div> <img src="../img/Settings.svg" /></div>
-                <div><img src="../img/profile.svg" /></div>
+                <div><a href="../pages/login.html"><img src="../img/profile.svg" /></a></div>
             </div>
         </div>
     </header>
