--- a/pages/trade.html
+++ b/pages/trade.html
@@ -81,13 +81,13 @@ const inputPay = document.getElementById("input_pay").value;
 const inputGet =document.getElementById("input_get").value;
 
     let value = inputPay;
+    let arrOperations = []
     {
     fetch(`https://openapiv1.coinstats.app/coins?limit=1&name=${paySelectedValue}`, options).then(res => res.json()).then(res =>{
         value= value * res.result[0].price
-      
     fetch(`https://openapiv1.coinstats.app/coins?limit=1&name=${getSelectedValue}`, options)
   .then(res => res.json())
-  .then(res =>   document.getElementById("input_get").value = Number(value   / res.result[0].price))
+  .then(res =>   document.getElementById("input_get").value = Number(value   / res.result[0].price), arrOperations.push( JSON.parse(localStorage.getItem('session')) || []), arrOperations.push({from :paySelectedValue , to: getSelectedValue, valuefrom: value}))
   .catch(err => console.error(err));
 
 
