--- a/pages/register.html
+++ b/pages/register.html
@@ -67,9 +67,9 @@
 
     const isAuth = JSON.parse(localStorage.getItem('isAuth'))
 
-if(isAuth){
-    window.location.href = "http://127.0.0.1:5500/pages/profile.html"
-}
+// if(isAuth){
+//     window.location.href = "http://127.0.0.1:5500/pages/profile.html"
+// }
 
 
 form.addEventListener('submit', (e) => {
